zeit.content.article changes
============================

3.20.2 (unreleased)
-------------------

- Extend product config to fix source configuration for testing. (ZON-3171)

- Adjust CSS for images to preview them more like Friedbert. (ZON-3216)


3.20.1 (2016-07-21)
-------------------

- Add acquisition attribute to CMS content


3.19 (2016-07-21)
-----------------

- Allow drag&drop for z.c.text objects (ZON-3018).

- Select default template/header_layout according to article
  interfaces (ZON-3088).


3.18.0 (2016-06-20)
-------------------

- Include first body image or video module as IHeaderArea.module (ZON-3088).

- Remove display mode from main image, make variant dependent on
  template/header (ZON-3088).


3.17.0 (2016-06-10)
-------------------

- Split image layout into two separate attributes to avoid combinatorial
  explosion (ZON-2927).


3.16.1 (2016-06-08)
-------------------

- Fix security declaration for IHeaderArea migration code.


3.16.0 (2016-06-08)
-------------------

- Implement separate editable area ``IHeaderArea`` to contain one
  module for the header (ZON-2871).


3.15.7 (2016-04-26)
-------------------

- Declare priority high for articles (ZON-2924).


3.15.6 (2016-04-20)
-------------------

- Make ``ICitation.attribution`` non-required (ZON-2962).


3.15.5 (2016-04-18)
-------------------

- Don't load Zope/UI specific ZCML in the model ZCML


3.15.4 (2016-04-15)
-------------------

- Fix styling of teaser image search button (BUG-146).


3.15.3 (2016-04-08)
-------------------

- Support separate facebook text for campus (ZON-2930).


3.15.2 (2016-04-07)
-------------------

- Add colorpicker for article teaser images (ZON-2898).


3.15.1 (2016-03-10)
-------------------

- Fix default value of infobox layout.


3.15.0 (2016-03-10)
-------------------

- Add ``layout`` to infobox block (ZON-2491).


3.14.2 (2016-03-10)
-------------------

- Improve wording (ZON-2826).


3.14.1 (2016-03-09)
-------------------
