@@ -8,6 +8,9 @@ zeit.content.article changes
 
 - Adjust CSS for images to preview them more like Friedbert. (ZON-3216)
 
+- Hide dropdown to choose variant name for Infographics, since Friedbert
+  overwrites the variant name with `original`. (ZON-3216)
+
 
 3.20.1 (2016-07-21)
 -------------------
